// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationView should render correctly 1`] = `
<Styled(ScrollViewMock)>
  <Styled(View)>
    <Connect(SMSNotificationFormContainer) />
    <ThankYouComponent
      fullfillmentCenterData={Array []}
      isBossInList={false}
      isGuest={true}
      isOrderPending={false}
      isShowBopisMessage={false}
      isShowMixedMessage={false}
      isShowShippingMessage={false}
      venmoOrderConfirmationContent={null}
    />
  </Styled(View)>
  <CnCCommonTemplate
    getPayPalSettings={Object {}}
    isConfirmationPage={true}
    isGuest={true}
    isPayPalWebViewEnable={false}
    isVenmoPaymentInProgress={false}
    navigation={null}
    onVenmoError={false}
    onVenmoSubmit={[Function]}
    pageCategory="confirmation"
    showPayPalButton={false}
    showVenmoSubmit={false}
    venmoPayment={null}
  />
</Styled(ScrollViewMock)>
`;

exports[`ConfirmationView should render correctly 2`] = `
<Styled(ScrollViewMock)>
  <Styled(View)>
    <Connect(SMSNotificationFormContainer) />
    <ThankYouComponent
      fullfillmentCenterData={
        Array [
          Object {
            "encryptedEmailAddress": "",
            "isGuest": true,
            "orderDate": "",
            "orderLink": "/",
            "orderNumber": 2345,
            "orderTotal": 23.45,
            "orderType": "ECOM",
            "productsCount": 5,
            "shippingFullname": undefined,
          },
        ]
      }
      isBossInList={false}
      isGuest={true}
      isOrderPending={false}
      isShowBopisMessage={true}
      isShowMixedMessage={false}
      isShowShippingMessage={true}
      orderNumbersByFullfillmentCenter={
        Object {
          "fullfillmentCenterMap": Array [
            Object {
              "center": Object {
                "orderType": "BOSS",
                "shippingFullname": "ship",
              },
            },
          ],
        }
      }
      venmoOrderConfirmationContent={null}
    />
  </Styled(View)>
  <CnCCommonTemplate
    getPayPalSettings={Object {}}
    isConfirmationPage={true}
    isGuest={true}
    isPayPalWebViewEnable={false}
    isVenmoPaymentInProgress={false}
    navigation={null}
    onVenmoError={false}
    onVenmoSubmit={[Function]}
    pageCategory="confirmation"
    showPayPalButton={false}
    showVenmoSubmit={false}
    venmoPayment={null}
  />
</Styled(ScrollViewMock)>
`;

exports[`ConfirmationView should render correctly without order details 1`] = `
<Styled(ScrollViewMock)>
  <Styled(View)>
    <Connect(SMSNotificationFormContainer) />
    <ThankYouComponent
      fullfillmentCenterData={
        Array [
          Object {
            "center": Object {
              "orderType": "BOSS",
              "shippingFullname": "ship",
            },
          },
        ]
      }
      isBossInList={false}
      isGuest={true}
      isOrderPending={false}
      isShowBopisMessage={true}
      isShowMixedMessage={false}
      isShowShippingMessage={false}
      orderNumbersByFullfillmentCenter={
        Object {
          "fullfillmentCenterMap": Array [
            Object {
              "center": Object {
                "orderType": "BOSS",
                "shippingFullname": "ship",
              },
            },
          ],
        }
      }
      venmoOrderConfirmationContent={null}
    />
  </Styled(View)>
  <CnCCommonTemplate
    getPayPalSettings={Object {}}
    isConfirmationPage={true}
    isGuest={true}
    isPayPalWebViewEnable={false}
    isVenmoPaymentInProgress={true}
    navigation={null}
    onVenmoError={false}
    onVenmoSubmit={[Function]}
    pageCategory="confirmation"
    showPayPalButton={false}
    showVenmoSubmit={false}
    venmoPayment={Object {}}
  />
</Styled(ScrollViewMock)>
`;
